force-app/main/default/objects/CartItem/fields/CartFreeItem__c.field-meta.xml
<CustomField>
    <fullName>CartFreeItem__c</fullName>
    <defaultValue>false</defaultValue>
    <description>CRM-1564</description>
    <label>Cart Free Item</label>
    <type>Checkbox</type>
</CustomField>