force-app/main/default/objects/CartItem/fields/LetterCampaignFreeItem2__c.field-meta.xml
<CustomField>
    <fullName>LetterCampaignFreeItem2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Letter Campaign Free Item 2</label>
    <type>Checkbox</type>
</CustomField>