force-app/main/default/objects/CartItem/fields/LetterCampaignFreeItem__c.field-meta.xml
<CustomField>
    <fullName>LetterCampaignFreeItem__c</fullName>
    <defaultValue>false</defaultValue>
    <description>CRM-553</description>
    <label>Letter Campaign Free Item</label>
    <type>Checkbox</type>
</CustomField>